Lab3/lab3service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: lab3ns
  name: lab3service
spec:
  selector:
    app: lab3app
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32222
