Lab3/lab3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: lab3ns
  name: lab3ingress
spec:
  tls:
  - hosts:
      - lab3.anton
    secretName: lab3-tls
  rules:
  - host: lab3.anton
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lab3-service
            port:
              number: 3000
